downgrade to java 8 because of 17 breaking everything